<resources>
    <string name="app_name">HMSapp</string>
    <string name="please_wait">Please wait…</string>
    <string name="dialog_network_unavailable_title">No internet connection</string>
    <string name="dialog_default_negative_button_label">Cancel</string>
    <string name="dialog_default_positive_button_label">OK</string>

    <string name="dialog_network_unavailable_message_check_and_try_again">Please check your internet connection and try again</string>
    <string name="dialog_network_unavailable_message_retry">Try again?</string>

    <string name="google_api_key_1">AIzaSyCVnZfSs-k2wudCOxwpouRMAhfYVQi2o-k</string>
    <string name="default_notification_channel_id">com.shohokari.android.app</string>
    <string name="fb_login_protocol_scheme">fb390539151417201</string>

    <string name="FACEBOOK_APP_ID">390539151417201</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">c628ffad381df51bfcd8d82adeb41244</string>
    <string name="ak_login_protocol_scheme">390539151417201</string>


    <string name="empty_password_error_message">Password cannot be empty</string>
    <string name="empty_email_error_message">Email cannot be empty</string>
    <string name="empty_mobile_number_error_message">Mobile number cannot be empty</string>
    <string name="invalid_email_error_message">Please Enter a valid email</string>
    <string name="sign_in_failure">Sign In failed</string>

    <!--Sign In messages-->
    <string name="sign_in_screen_title">Sign In</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sig_in_button_text">Sign In</string>

    <!--Sign up messages-->
    <string name="sign_up">Sign Up</string>
    <string name="user_name">Name</string>
    <string name="mobile_number_hint">Mobile Number</string>
    <string name="user_location">Location</string>
    <string name="user_gender">Gender</string>
    <string name="user_password">Password</string>
    <string name="user_confirm_password">Confirm Password</string>

    <!--Forgot password messages-->
    <string name="forgot_password_screen_title">Forgot Password</string>

    <!--Navigation Drawer Items-->
    <string name="navigation_drawer_home_label">Home</string>
    <string name="navigation_drawer_about_label">About</string>
    <string name="navigation_drawer_rate_us_label">Rate Us</string>
    <string name="navigation_drawer_log_out_label">Logout</string>

    <string name="about_screen_title">About</string>
    <string name="rate_us_screen_title">Rate Us</string>

    <string name="project_info">This sample app implements MVP architecture using Dagger2, GreenDao, RxJava, FastAndroidNetworking and PlaceholderView</string>
    <string name="link_mvp_blog">1. https://blog.mindorks.com</string>
    <string name="link_mvp_repo">2. https://github.com/MindorksOpenSource/android-mvp-architecture</string>
    <string name="link_mindorks_blog">3. https://blog.mindorks.com</string>
    <string name="link_mindorks_repo">4. https://github.com/MindorksOpenSource</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="rating_message">Please let us know, how can we improve ourselves?</string>
    <string name="rating_play_store_redirect_message_line_1">Awesome! Thank you for the 5 stars</string>
    <string name="rating_play_store_redirect_message_line_2">Please help others, in knowing some good things about this app.</string>
    <string name="later">Later</string>
    <string name="submit">Submit</string>
    <string name="rating_play_store_text">Rate us on Play Store</string>
    <string name="rating_submitted_successfully">Rating submitted successfully</string>

    <!--Home Screen Items-->
    <string name="home_info_general_information">General Information</string>
    <string name="home_info_no_of_beds_available">Available Beds</string>
    <string name="home_info_no_of_reports_to_be_delivered">Reports To Be Delivered</string>
    <string name="home_info_no_of_blood_bags_available">Available Blood Bags</string>

    <string name="home_info_doctors_information">Doctors Information</string>
    <string name="home_info_doctors_available">Doctors Available</string>
    <string name="home_info_doctors_department_1">Anesthesiology</string>
    <string name="home_info_doctors_department_2">Laboratory</string>
    <string name="home_info_doctors_department_3">Therapy</string>
    <string name="home_info_doctors_department_4">Surgery</string>

    <string name="home_info_appointment_information">Appointment Information</string>
    <string name="home_info_appointment_total_appointments">Total Appointments</string>
    <string name="home_info_appointment_department_1">Anesthesiology</string>
    <string name="home_info_appointment_department_2">Laboratory</string>
    <string name="home_info_appointment_department_3">Therapy</string>
    <string name="home_info_appointment_department_4">Surgery</string>

</resources>
