<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
                android:id="@+id/navItemHome"
                android:checked="true"
                android:icon="@drawable/ic_home_24"
                android:title="@string/navigation_drawer_home_label"/>
        <item
                android:id="@+id/navItemRateUs"
                android:checked="true"
                android:icon="@drawable/ic_star_24"
                android:title="@string/navigation_drawer_rate_us_label"/>
        <item
                android:id="@+id/navItemAbout"
                android:checked="true"
                android:icon="@drawable/ic_info_24"
                android:title="@string/navigation_drawer_about_label"/>
        <item
                android:id="@+id/navItemLogout"
                android:checked="true"
                android:icon="@drawable/ic_log_out_24"
                android:title="@string/navigation_drawer_log_out_label"/>
    </group>
</menu>