<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

    <View
            android:id="@+id/view"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"/>

    <ScrollView
            android:id="@+id/ScrollView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/view"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/registration_background"
            android:padding="25dp">

        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_gravity="center"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/member_login_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/sign_in_screen_title"
                    android:textSize="@dimen/huge"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:typeface="monospace"/>

            <EditText
                    android:id="@+id/sign_in_edit_text_widget_mobile_number"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/height_for_spinner"
                    android:background="@drawable/rounded_edittext_background"
                    android:layout_below="@+id/member_login_tv"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:hint="@string/mobile_number_hint"
                    android:inputType="phone"
                    android:textStyle="bold"/>

            <EditText
                    android:id="@+id/sign_in_edit_text_widget_password"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/height_for_spinner"
                    android:background="@drawable/rounded_edittext_background"
                    android:layout_below="@+id/sign_in_edit_text_widget_mobile_number"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:textStyle="bold"/>

            <Button
                    android:id="@+id/sign_in_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/sign_in_edit_text_widget_password"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/button_circular_pink"
                    android:text="@string/sig_in_button_text"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_medium"/>

            <TextView
                    android:id="@+id/forgot_password_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/sign_in_button"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:text="@string/forgot_password_screen_title"
                    android:textSize="@dimen/large"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:typeface="monospace"/>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>