<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginBottom="@dimen/dp10">
    <TextView
            android:textSize="@dimen/dp13"
            android:id="@id/tvGeneral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginBottom="@dimen/dp10"
            android:text="@string/home_info_general_information"/>
    <LinearLayout
            android:orientation="horizontal"
            android:background="@drawable/dashboard_background"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="3.0">
        <LinearLayout
                android:orientation="horizontal"
                android:background="@drawable/rectangle_green_background"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_marginRight="@dimen/dp5"
                android:layout_weight="1.0">
            <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:orientation="vertical"
                        android:paddingLeft="@dimen/dp3"
                        android:paddingTop="@dimen/dp20"
                        android:paddingRight="@dimen/dp3"
                        android:paddingBottom="@dimen/dp20"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="3.0"
                        android:layout_centerInParent="true">
                    <ImageView
                            android:layout_gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/office_white"
                            android:layout_weight="1.0"/>
                    <TextView
                            android:textSize="@dimen/dp12"
                            android:textColor="@color/white"
                            android:gravity="center_horizontal"
                            android:layout_gravity="center_horizontal"
                            android:id="@+id/tvAllotedBedCount"
                            android:padding="@dimen/dp2"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:layout_weight="1.0"/>
                    <TextView
                            android:textSize="@dimen/dp8"
                            android:textColor="@color/dashboard_text_light"
                            android:layout_gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/home_info_no_of_beds_available"
                            android:layout_weight="1.0"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:background="@drawable/rectangle_blue_background"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_marginRight="@dimen/dp5"
                android:layout_weight="1.0">
            <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
                <LinearLayout
                        android:orientation="vertical"
                        android:padding="@dimen/dp20"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:weightSum="3.0"
                        android:layout_centerInParent="true">
                    <ImageView
                            android:layout_gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/samity_white"
                            android:layout_weight="1.0"/>
                    <TextView
                            android:textSize="@dimen/dp12"
                            android:textColor="@color/white"
                            android:layout_gravity="center_horizontal"
                            android:id="@+id/tvReportsToBeDeliveredCount"
                            android:padding="@dimen/dp2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:layout_weight="1.0"/>
                    <TextView
                            android:textSize="@dimen/dp8"
                            android:textColor="@color/dashboard_text_light"
                            android:layout_gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/home_info_no_of_reports_to_be_delivered"
                            android:layout_weight="1.0"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:background="@drawable/rectangle_orange_background"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_marginRight="@dimen/dp5"
                android:layout_weight="1.0">
            <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
                <LinearLayout
                        android:orientation="vertical"
                        android:padding="@dimen/dp20"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:weightSum="3.0"
                        android:layout_centerInParent="true">
                    <ImageView
                            android:layout_gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/member_white"
                            android:layout_weight="1.0"/>
                    <TextView
                            android:textSize="@dimen/dp12"
                            android:textColor="@color/white"
                            android:layout_gravity="center_horizontal"
                            android:id="@+id/tvBloodsAvailableCount"
                            android:padding="@dimen/dp2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:layout_weight="1.0"/>
                    <TextView
                            android:textSize="@dimen/dp8"
                            android:textColor="@color/dashboard_text_light"
                            android:layout_gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/home_info_no_of_blood_bags_available"
                            android:layout_weight="1.0"/>
                </LinearLayout>
                <View android:background="@color/dashboard_line"
                      android:layout_width="@dimen/dp1"
                      android:layout_height="fill_parent"
                      android:layout_alignParentRight="true"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>